{{$NEXT}}

    - Add pre_filter and pre_unfilter to Hubs

0.000019  2016-01-12 16:08:11-08:00 America/Los_Angeles

    - Make third-party meta-data interface consistent.

0.000018  2016-01-12 05:53:29-08:00 America/Los_Angeles

    - Better solution to the $?, $!, and $@ problem
    - error vars are stored/restored by the context

0.000017  2016-01-11 16:33:55-08:00 America/Los_Angeles

    - Fix $! squashing

0.000016  2016-01-10 11:54:57-08:00 America/Los_Angeles

    - Better encapsulation of API::Instance
    - API methods to get lists of hooks
    - Minor fixes to IPC shm logic
    - Preload event types when API is loaded
    - Added IPC acceptance tests

0.000015  2016-01-07 19:26:58-08:00 America/Los_Angeles

    - Make it possible to use a custom new() with HashBase

0.000014  2016-01-07 07:31:23-08:00 America/Los_Angeles

    - Silence a warning in older perls (warning breaks Test-Simple tests)

0.000013  2016-01-06 11:12:21-08:00 America/Los_Angeles

    - Remove diag from inside todo (separation of concerns, less TAP influence)
    - Remove internal TODO tracking (not needed, less TAP influence)
    - Make context less magic (Follwing advice from Graham Knop and RJBS)
    - Remove State.pm (part of Hub.pm again, no longer needs to be separate)
    - Make it possible to subclass the TAP formatter
    - Minor optimization in Event->meta
    - Better messaging if subtest plan is wrong
    - HashBase in subclass will not override accessors from parent (Graham Knop)
    - TAP formatter doc updates
    - Optimizations for Hub->process and TAP->Write
    - IPC File-Driver Optimizations
    - IPC use SHM when possible to notify about pending events

0.000012  2015-12-29 12:59:26-08:00 America/Los_Angeles

    - Restructure file layout
    - Document namespaces
    - Combine Global and API into a single module

0.000011  2015-12-28 13:09:38-08:00 America/Los_Angeles

    - Fix TAP output to match what Test::More produced
